--- a/examples/cfg/quant_proxylessnas_mobile14_hadamard_4b.ini
+++ b/examples/cfg/quant_proxylessnas_mobile14_hadamard_4b.ini
@@ -1,12 +1,12 @@
 [MODEL]
 ARCH: quant_proxylessnas_mobile14
-PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_proxylessnas_mobile14_4b5b-r0/quant_proxylessnas_mobile14_4b5b-2bdf7f8d.pth
-HADAMARD_CLASSIFIER: FALSE
+PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_proxylessnas_mobile14_hadamard_4b-r0/quant_proxylessnas_mobile14_hadamard_4b-4acbfa9f.pth
+HADAMARD_CLASSIFIER = TRUE
 
 [QUANT]
 FIRST_LAYER_WEIGHT_BIT_WIDTH: 8
 BIT_WIDTH: 4
-DEPTHWISE_BIT_WIDTH: 5
+DEPTHWISE_BIT_WIDTH: 4
 
 [PREPROCESS]
 # 128 / 255 = 0.5019607843137255
