Refactor (Setup): rewrite setup.py to read requirements from separate .txt files, refactor the code generation process to allow packaging to be a setup (i.e. build time) dependency that pip can automatically retrieve, and some additional cleanups
Signed-off-by: Alessandro Pappalardo <alessand@xilinx.com>

--- a/brevitas/function/ops_ste.py.template
+++ b/brevitas/function/ops_ste.py.template
@@ -41,7 +41,7 @@
 from brevitas.function.autograd_ops import *
 
 
-<torch_jit_template>
+${torch_jit_template}
 def round_ste(x: torch.Tensor) -> torch.Tensor:
     """ Perform round operation with Straight Trough Estimation (STE) of the Gradient
 
@@ -65,9 +65,9 @@ def round_ste(x: torch.Tensor) -> torch.Tensor:
         a straight through estimator is applied.
 
     """
-    return <function_prefix>round_ste<function_suffix>(x)
+    return ${function_prefix}round_ste${function_suffix}(x)
 
-<torch_jit_template>
+${torch_jit_template}
 def ceil_ste(x: torch.Tensor) -> torch.Tensor:
     """ Perform ceil operation with Straight Trough Estimation (STE) of the Gradient
 
@@ -90,10 +90,10 @@ def ceil_ste(x: torch.Tensor) -> torch.Tensor:
         When backpropagating through this value, a straight through estimator is applied.
 
     """
-    return <function_prefix>ceil_ste<function_suffix>(x)
+    return ${function_prefix}ceil_ste${function_suffix}(x)
 
 
-<torch_jit_template>
+${torch_jit_template}
 def floor_ste(x: torch.Tensor) -> torch.Tensor:
     """ Perform floor operation with Straight Trough Estimation (STE) of the Gradient
 
@@ -116,10 +116,10 @@ def floor_ste(x: torch.Tensor) -> torch.Tensor:
         When backpropagating through this value, a straight through estimator is applied.
 
     """
-    return <function_prefix>floor_ste<function_suffix>(x)
+    return ${function_prefix}floor_ste${function_suffix}(x)
 
 
-<torch_jit_template>
+${torch_jit_template}
 def tensor_clamp_ste(x: torch.Tensor, min_val: torch.Tensor, max_val: torch.Tensor) -> torch.Tensor:
     """ Perform tensor-clamp operation with Straight Trough Estimation (STE) of the Gradient
 
@@ -148,11 +148,11 @@ def tensor_clamp_ste(x: torch.Tensor, min_val: torch.Tensor, max_val: torch.Tens
         Tensor for which every element of `x` is clamped between the corresponding minimum and maximum values.
         When backpropagating through this value, a straight through estimator is applied.
     """
-    output = <function_prefix>tensor_clamp_ste<function_suffix>(x, min_val, max_val)
+    output = ${function_prefix}tensor_clamp_ste${function_suffix}(x, min_val, max_val)
     return output
 
 
-<torch_jit_template>
+${torch_jit_template}
 def scalar_clamp_ste(x: torch.Tensor, min_val: float, max_val: float) -> torch.Tensor:
     """ Perform clamp operation with Straight Trough Estimation (STE) of the Gradient
 
@@ -179,10 +179,10 @@ def scalar_clamp_ste(x: torch.Tensor, min_val: float, max_val: float) -> torch.T
         Tensor for which every element of `x` is clamped between `min_val` and `max_val`.
         When backpropagating through this value, a straight through estimator is applied.
     """
-    return <function_prefix>scalar_clamp_ste<function_suffix>(x, min_val, max_val)
+    return ${function_prefix}scalar_clamp_ste${function_suffix}(x, min_val, max_val)
 
 
-<torch_jit_template>
+${torch_jit_template}
 def binary_sign_ste(x: torch.Tensor) -> torch.Tensor:
     """ Perform binarization with Straight Trough Estimation (STE) of the Gradient
 
@@ -208,10 +208,10 @@ def binary_sign_ste(x: torch.Tensor) -> torch.Tensor:
         through estimator is applied.
 
     """
-    return <function_prefix>binary_sign_ste<function_suffix>(x)
+    return ${function_prefix}binary_sign_ste${function_suffix}(x)
 
 
-<torch_jit_template>
+${torch_jit_template}
 def ternary_sign_ste(x: torch.Tensor) -> torch.Tensor:
     """ Perform ternary operator with Straight Trough Estimation (STE) of the Gradient
 
@@ -236,4 +236,4 @@ def ternary_sign_ste(x: torch.Tensor) -> torch.Tensor:
         a straight through estimator is applied.
 
     """
-    return <function_prefix>ternary_sign_ste<function_suffix>(x)
+    return ${function_prefix}ternary_sign_ste${function_suffix}(x)
