CI/CD: add dev to the list of branches that tests are run against

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ master, infra ]
+    branches: [ master, infra, dev ]
   pull_request:
-    branches: [ master, infra ]
+    branches: [ master, infra, dev ]
 
 jobs:
   build:
