--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         pytorch_version: [ '1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0' ]
         conda_python_version: [ '3.6', '3.7', '3.8' ]
+        jit_enabled: [ true, false ]
         platform: [ windows-latest, ubuntu-latest, macos-latest ]
         exclude:
           - platform: windows-latest
@@ -115,7 +116,7 @@ jobs:
 
     - name: Run Nox session
       shell: bash
-      run: nox --verbose --session tests_cpu-${{ matrix.conda_python_version }}\(pytorch_${{ matrix.pytorch_version }}\)
+      run: nox --verbose --session tests_cpu-${{ matrix.conda_python_version }}\(jit_${{ matrix.jit_enabled }}\,\ pytorch_${{ matrix.pytorch_version }}\)
 
     - name: Remove tarballs before caching Pytorch deps pkgs
       shell: bash
