CI/CD: refactor JIT flag in tests.yml to a string rather than a bool
Signed-off-by: Alessandro Pappalardo <alessand@xilinx.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         pytorch_version: [ '1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0' ]
         conda_python_version: [ '3.6', '3.7', '3.8' ]
-        jit_enabled: [ true, false ]
+        jit_status: [ 'jit_enabled', 'jit_disabled' ]
         platform: [ windows-latest, ubuntu-latest, macos-latest ]
         exclude:
           - platform: windows-latest
@@ -31,7 +31,7 @@ jobs:
           - pytorch_version: '1.3.1'
             conda_python_version: '3.8'
           - pytorch_version: '1.1.0'
-            jit_enabled: false
+            jit_status: 'jit_disabled'
 
     steps:
 
@@ -118,7 +118,7 @@ jobs:
 
     - name: Run Nox session
       shell: bash
-      run: nox --verbose --session tests_cpu-${{ matrix.conda_python_version }}\(jit_${{ matrix.jit_enabled }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+      run: nox --verbose --session tests_cpu-${{ matrix.conda_python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
 
     - name: Remove tarballs before caching Pytorch deps pkgs
       shell: bash
