--- a/.github/workflows/base.yml.template
+++ b/.github/workflows/base.yml.template
@@ -1,4 +1,4 @@
-name: Tests
+name: &{name}
 
 on:
   push:
@@ -13,25 +13,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pytorch_version: [ '1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0' ]
-        conda_python_version: [ '3.6', '3.7', '3.8' ]
-        jit_status: [ 'jit_enabled', 'jit_disabled' ]
-        platform: [ windows-latest, ubuntu-latest, macos-latest ]
+&{matrix}
         exclude:
-          - platform: windows-latest
-            conda_python_version: '3.6'
-          - platform: macos-latest
-            pytorch_version: '1.1.0'
-          - pytorch_version: '1.1.0'
-            conda_python_version: '3.8'
-          - pytorch_version: '1.2.0'
-            conda_python_version: '3.8'
-          - pytorch_version: '1.3.0'
-            conda_python_version: '3.8'
-          - pytorch_version: '1.3.1'
-            conda_python_version: '3.8'
-          - pytorch_version: '1.1.0'
-            jit_status: 'jit_disabled'
+&{exclude}
 
     steps:
 
@@ -116,13 +100,7 @@ jobs:
         rm -R ${{ steps.cache-dirs.outputs.pytorch_pkg_cache_path }}/pytorch*
       if: steps.pytorch-cache.outputs.cache-hit == 'true'
 
-    - name: Run Nox session for pytest
-      shell: bash
-      run: nox --verbose --session tests_cpu-${{ matrix.conda_python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
-
-    - name: Run Nox session for import tests
-      shell: bash
-      run: nox --verbose --session tests_install_develop-${{ matrix.conda_python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+&{steps}
 
     - name: Remove tarballs before caching Pytorch deps pkgs
       shell: bash
