Examples: make speech_to_text an installable package

--- a/brevitas_examples/speech_to_text/cfg/quant_quartznet_perchannelscaling_8b.ini
+++ b/brevitas_examples/speech_to_text/cfg/quant_quartznet_perchannelscaling_8b.ini
@@ -1,6 +1,6 @@
 [MODEL]
 ARCH: quartznet
-TOPOLOGY_FILE: cfg/topology/quartznet15x5.yaml
+TOPOLOGY_FILE: quartznet15x5.yaml
 PRETRAINED_ENCODER_URL: https://github.com/Xilinx/brevitas/releases/download/quant_quartznet_8b-r0/quant_quartznet_encoder_8b-50f12b4b.pth
 PRETRAINED_DECODER_URL: https://github.com/Xilinx/brevitas/releases/download/quant_quartznet_8b-r0/quant_quartznet_decoder_8b-af09651c.pth
 
