--- a/brevitas_examples/speech_to_text/cfg/quant_quartznet_perchannelscaling_4b.ini
+++ b/brevitas_examples/speech_to_text/cfg/quant_quartznet_perchannelscaling_4b.ini
@@ -1,6 +1,6 @@
 [MODEL]
 ARCH: quartznet
-TOPOLOGY_FILE: cfg/topology/quartznet15x5.yaml
+TOPOLOGY_FILE: quartznet15x5.yaml
 PRETRAINED_ENCODER_URL: https://github.com/Xilinx/brevitas/releases/download/quant_quartznet_4b-r0/quant_quartznet_encoder_4b-0a46a232.pth
 PRETRAINED_DECODER_URL: https://github.com/Xilinx/brevitas/releases/download/quant_quartznet_4b-r0/quant_quartznet_decoder_4b-bcbf8c7b.pth
 
