--- a/.github/workflows/base.yml.template
+++ b/.github/workflows/base.yml.template
@@ -57,6 +57,11 @@ jobs:
         mkdir $CONDA_PKGS_DIRS
         mkdir $PYTORCH_PKG_CACHE_PATH
 
+    - name: Install libsndfile on Ubuntu
+      shell: bash
+      run: apt-get install -y libsndfile
+      if: startsWith(runner.os, 'Ubuntu') == true
+
     - name: Setup Conda
       uses: s-weigand/setup-conda@v1
 
