Fix name of OS from Ubuntu to Linux
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Install libsndfile on Ubuntu
       shell: bash
       run: apt-get install -y libsndfile
-      if: startsWith(runner.os, 'Ubuntu') == true
+      if: startsWith(runner.os, 'Linux') == true
 
     - name: Setup Conda
       uses: s-weigand/setup-conda@v1
