Fix missing sudo
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/.github/workflows/base.yml.template
+++ b/.github/workflows/base.yml.template
@@ -59,7 +59,7 @@ jobs:
 
     - name: Install libsndfile on Ubuntu
       shell: bash
-      run: apt-get install -y libsndfile
+      run: sudo apt-get install -y libsndfile
       if: startsWith(runner.os, 'Linux') == true
 
     - name: Setup Conda
