--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -85,7 +85,7 @@ jobs:
 
     - name: Install libsndfile on Ubuntu
       shell: bash
-      run: apt-get install -y libsndfile
+      run: sudo apt-get install -y libsndfile
       if: startsWith(runner.os, 'Linux') == true
 
     - name: Setup Conda
