CI/CD: enable CI on feature/finn_onnx_export branch
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,9 +2,9 @@ name: Pytest
 
 on:
   push:
-    branches: [ master, infra, dev ]
+    branches: [ master, infra, dev, feature/finn_onnx_export ]
   pull_request:
-    branches: [ master, infra, dev ]
+    branches: [ master, infra, dev, feature/finn_onnx_export ]
 
 jobs:
   build:
