--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -37,6 +37,12 @@ jobs:
           - pytorch_version: '1.3.1'
             conda_python_version: '3.8'
 
+          - pytorch_version: '1.3.0'
+
+          - pytorch_version: '1.3.1'
+
+          - pytorch_version: '1.4.0'
+
 
 
     steps:
