--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -19,9 +19,6 @@ jobs:
 
 
         exclude:
-          - platform: 'windows-latest'
-            conda_python_version: '3.6'
-
           - platform: 'macos-latest'
             pytorch_version: '1.1.0'
 
@@ -132,6 +129,11 @@ jobs:
         cp -R ${{ steps.cache-dirs.outputs.pytorch_pkg_cache_path }}/pytorch* ${{ steps.cache-dirs.outputs.conda_pkgs_cache_path }}/
         rm -R ${{ steps.cache-dirs.outputs.pytorch_pkg_cache_path }}/pytorch*
       if: steps.pytorch-cache.outputs.cache-hit == 'true'
+
+    - name: Install protobuf on Ubuntu
+      shell: bash
+      run: sudo apt-get install protobuf-compiler libprotoc-dev
+      if: startsWith(runner.os, 'Linux') == true
 
     - name: Run Nox session for Brevitas-FINN integration
       shell: bash
