CI/CD: add Python 3.6 on Win to FINN-Brevitas exclude list
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -40,6 +40,9 @@ jobs:
 
           - pytorch_version: '1.4.0'
 
+          - platform: 'windows-latest'
+            conda_python_version: '3.6'
+
 
 
     steps:
