Examples (bnn_pynq): Add EVAL_LOG field to FC models

--- a/brevitas_examples/bnn_pynq/cfg/sfc_1w1a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/sfc_1w1a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: SFC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/sfc_1w1a-fd8a6c3d.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/sfc_1w1a_eval-fd8a6c3d.txt
 DATASET: MNIST
 IN_CHANNELS: 1
 NUM_CLASSES: 10
