--- a/brevitas_examples/bnn_pynq/cfg/lfc_1w1a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/lfc_1w1a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: LFC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/lfc_1w1a-db6e13bd.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/lfc_1w1a_eval-db6e13bd.txt
 DATASET: MNIST
 IN_CHANNELS: 1
 NUM_CLASSES: 10
