--- a/brevitas_examples/bnn_pynq/cfg/sfc_1w2a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/sfc_1w2a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: SFC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/sfc_1w2a-fdc0c779.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/sfc_1w2a_eval-fdc0c779.txt
 DATASET: MNIST
 IN_CHANNELS: 1
 NUM_CLASSES: 10
