--- a/brevitas_examples/bnn_pynq/cfg/tfc_1w2a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/tfc_1w2a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: TFC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/tfc_1w2a-95ad635b.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/tfc_1w2a_eval-95ad635b.txt
 DATASET: MNIST
 IN_CHANNELS: 1
 NUM_CLASSES: 10
