--- a/brevitas_examples/bnn_pynq/cfg/tfc_2w2a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/tfc_2w2a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: TFC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/tfc_2w2a-7e0a62f1.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/tfc_2w2a_eval-7e0a62f1.txt
 DATASET: MNIST
 IN_CHANNELS: 1
 NUM_CLASSES: 10
