CI/CD: add Pytorch 1.2.0 w/ JIT disabled to exclusion list
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -38,6 +38,9 @@ jobs:
           - pytorch_version: '1.1.0'
             jit_status: 'jit_disabled'
 
+          - pytorch_version: '1.2.0'
+            jit_status: 'jit_disabled'
+
 
 
     steps:
