--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         conda_python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0']
+        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0', '1.5.0']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
         jit_status: ['jit_enabled', 'jit_disabled']
 
@@ -40,6 +40,10 @@ jobs:
 
           - pytorch_version: '1.2.0'
             jit_status: 'jit_disabled'
+
+          - platform: 'macos-latest'
+            pytorch_version: '1.5.0'
+            conda_python_version: '3.6'
 
 
 
