--- a/brevitas_examples/bnn_pynq/cfg/cnv_1w1a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/cnv_1w1a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: CNV
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/cnv_1w1a-758c8fef.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/cnv_test_ref-r0/cnv_1w1a_eval-db6e13bd.txt
 DATASET: CIFAR10
 IN_CHANNELS: 3
 NUM_CLASSES: 10
