--- a/brevitas_examples/bnn_pynq/cfg/cnv_1w2a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/cnv_1w2a.ini
@@ -1,6 +1,7 @@
 [MODEL]
 ARCH: CNV
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/cnv_1w2a-23b6e2e4.pth
+EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/cnv_test_ref-r0/cnv_1w2a_eval-e730a76d.txt
 DATASET: CIFAR10
 IN_CHANNELS: 3
 NUM_CLASSES: 10
