--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -2,9 +2,9 @@ name: Test Brevitas-FINN integration
 
 on:
   push:
-    branches: [ master, infra, dev, feature/finn_onnx_export_dev ]
+    branches: [ master, infra, dev, feature/finn_onnx_export_dev, test_qntavgpool2d ]
   pull_request:
-    branches: [ master, infra, dev, feature/finn_onnx_export_dev ]
+    branches: [ master, infra, dev, feature/finn_onnx_export_dev, test_qntavgpool2d ]
 
 jobs:
   build:
