--- a/.github/workflows/develop_install.yml
+++ b/.github/workflows/develop_install.yml
@@ -2,9 +2,9 @@ name: Test develop install
 
 on:
   push:
-    branches: [ master, infra, dev, feature/finn_onnx_export, test_qntavgpool2d ]
+    branches: [ master, infra, dev, feature/finn_onnx_export ]
   pull_request:
-    branches: [ master, infra, dev, feature/finn_onnx_export, test_qntavgpool2d ]
+    branches: [ master, infra, dev, feature/finn_onnx_export ]
 
 jobs:
   build:
