--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -1,10 +1,10 @@
-name: Pytest
+name: Test Brevitas-FINN integration
 
 on:
   push:
-    branches: [ master, infra, dev, feature/finn_onnx_export ]
+    branches: [ master, infra, dev, feature/finn_onnx_export_dev ]
   pull_request:
-    branches: [ master, infra, dev, feature/finn_onnx_export ]
+    branches: [ master, infra, dev, feature/finn_onnx_export_dev ]
 
 jobs:
   build:
@@ -14,9 +14,8 @@ jobs:
       fail-fast: false
       matrix:
         conda_python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0', '1.5.0']
+        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
-        jit_status: ['jit_enabled', 'jit_disabled']
 
 
         exclude:
@@ -35,11 +34,14 @@ jobs:
           - pytorch_version: '1.3.1'
             conda_python_version: '3.8'
 
-          - pytorch_version: '1.1.0'
-            jit_status: 'jit_disabled'
+          - pytorch_version: '1.3.0'
 
-          - pytorch_version: '1.2.0'
-            jit_status: 'jit_disabled'
+          - pytorch_version: '1.3.1'
+
+          - pytorch_version: '1.4.0'
+
+          - platform: 'windows-latest'
+            conda_python_version: '3.6'
 
 
 
@@ -131,9 +133,14 @@ jobs:
         rm -R ${{ steps.cache-dirs.outputs.pytorch_pkg_cache_path }}/pytorch*
       if: steps.pytorch-cache.outputs.cache-hit == 'true'
 
-    - name: Run Nox session for brevitas pytest
+    - name: Install protobuf on Ubuntu
       shell: bash
-      run: nox -v -s tests_brevitas_cpu-${{ matrix.conda_python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+      run: sudo apt-get install protobuf-compiler libprotoc-dev
+      if: startsWith(runner.os, 'Linux') == true
+
+    - name: Run Nox session for Brevitas-FINN integration
+      shell: bash
+      run: nox -v -s tests_brevitas_finn_integration-${{ matrix.conda_python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
 
 
 
