Examples (mobilenetv1): update to r2 w/ 4b first layer
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/brevitas_examples/imagenet_classification/cfg/quant_mobilenet_v1_4b.ini
+++ b/brevitas_examples/imagenet_classification/cfg/quant_mobilenet_v1_4b.ini
@@ -1,10 +1,11 @@
 [MODEL]
 ARCH: quant_mobilenet_v1
 WIDTH_SCALE: 1.0
-PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_mobilenet_v1_4b-r1/quant_mobilenet_v1_4b-0100a667.pth
+PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_mobilenet_v1_4b-r2/quant_mobilenet_v1_4b-e75a094f.pth
 
 [QUANT]
 BIT_WIDTH: 4
+FIRST_LAYER_BIT_WIDTH: 4
 
 [PREPROCESS]
 MEAN_0: 0.485
