--- a/.github/workflows/pyxir_integration.yml
+++ b/.github/workflows/pyxir_integration.yml
@@ -1,4 +1,4 @@
-name: &{name}
+name: Test Brevitas-PyXIR integration
 
 on:
   push:
@@ -13,9 +13,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-&{matrix}
+        conda_python_version: ['3.6', '3.7', '3.8']
+        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0', '1.5.0']
+        platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
+
+
         exclude:
-&{exclude}
+          - platform: 'macos-latest'
+            pytorch_version: '1.1.0'
+
+          - pytorch_version: '1.1.0'
+            conda_python_version: '3.8'
+
+          - pytorch_version: '1.2.0'
+            conda_python_version: '3.8'
+
+          - pytorch_version: '1.3.0'
+            conda_python_version: '3.8'
+
+          - pytorch_version: '1.3.1'
+            conda_python_version: '3.8'
+
+
 
     steps:
 
@@ -105,7 +124,11 @@ jobs:
         rm -R ${{ steps.cache-dirs.outputs.pytorch_pkg_cache_path }}/pytorch*
       if: steps.pytorch-cache.outputs.cache-hit == 'true'
 
-&{steps}
+    - name: Run Nox session for Brevitas-PyXIR integration
+      shell: bash
+      run: nox -v -s tests_brevitas_pyxir_integration-${{ matrix.conda_python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+
+
 
     - name: Remove tarballs before caching Pytorch deps pkgs
       shell: bash
