Examples (BNN-PYNQ): idiomatic and simplified implementation w.r.t. new D.I. APIs
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/brevitas_examples/bnn_pynq/cfg/lfc_1w1a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/lfc_1w1a.ini
@@ -1,9 +1,10 @@
 [MODEL]
-ARCH: LFC
+ARCH: FC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/lfc_1w1a-db6e13bd.pth
 EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/lfc_1w1a_eval-db6e13bd.txt
 DATASET: MNIST
 IN_CHANNELS: 1
+OUT_FEATURES = [1024, 1024, 1024]
 NUM_CLASSES: 10
 
 [QUANT]
