--- a/brevitas_examples/bnn_pynq/cfg/lfc_1w2a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/lfc_1w2a.ini
@@ -1,9 +1,10 @@
 [MODEL]
-ARCH: LFC
+ARCH: FC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/lfc_1w2a-0a771c67.pth
 EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/lfc_1w2a_eval-0a771c67.txt
 DATASET: MNIST
 IN_CHANNELS: 1
+OUT_FEATURES = [1024, 1024, 1024]
 NUM_CLASSES: 10
 
 [QUANT]
