--- a/brevitas_examples/bnn_pynq/cfg/tfc_1w1a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/tfc_1w1a.ini
@@ -1,9 +1,10 @@
 [MODEL]
-ARCH: TFC
+ARCH: FC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/tfc_1w1a-ff8140dc.pth
 EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/tfc_1w1a_eval-ff8140dc.txt
 DATASET: MNIST
 IN_CHANNELS: 1
+OUT_FEATURES = [64, 64, 64]
 NUM_CLASSES: 10
 
 [QUANT]
