--- a/brevitas_examples/bnn_pynq/cfg/sfc_1w1a.ini
+++ b/brevitas_examples/bnn_pynq/cfg/sfc_1w1a.ini
@@ -1,9 +1,10 @@
 [MODEL]
-ARCH: SFC
+ARCH: FC
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/sfc_1w1a-fd8a6c3d.pth
 EVAL_LOG: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r0/sfc_1w1a_eval-fd8a6c3d.txt
 DATASET: MNIST
 IN_CHANNELS: 1
+OUT_FEATURES = [256, 256, 256]
 NUM_CLASSES: 10
 
 [QUANT]
