--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -2,9 +2,9 @@ name: Test Brevitas-FINN integration
 
 on:
   push:
-    branches: [ master, infra, dev, feature/finn_onnx_export_dev ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ master, infra, dev, feature/finn_onnx_export_dev ]
+    branches: [ master, dev ]
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         conda_python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0']
+        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0', '1.5.0']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
 
@@ -33,12 +33,6 @@ jobs:
 
           - pytorch_version: '1.3.1'
             conda_python_version: '3.8'
-
-          - pytorch_version: '1.3.0'
-
-          - pytorch_version: '1.3.1'
-
-          - pytorch_version: '1.4.0'
 
           - platform: 'windows-latest'
             conda_python_version: '3.6'
