--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -2,9 +2,9 @@ name: Examples Pytest
 
 on:
   push:
-    branches: [ master, infra, dev ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ master, infra, dev ]
+    branches: [ master, dev ]
 
 jobs:
   build:
