--- a/requirements/requirements-finn-integration.txt
+++ b/requirements/requirements-finn-integration.txt
@@ -1,5 +1,6 @@
 bitstring
-onnx==1.5.0
+onnx==1.5.0; python_version < '3.8' or sys_platform == 'linux'
+onnx; python_version >= '3.8' and sys_platform != 'linux'
 onnxruntime
 finn @ git+https://github.com/Xilinx/finn@dev#egg=finn
 toposort
