Core: factor out TorchScript support to make it toggable, default disabled
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/brevitas/function/ops_ste.py.template
+++ b/brevitas/function/ops_ste.py.template
@@ -38,6 +38,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
+import brevitas
 from brevitas.function.autograd_ops import *
 
 
