--- a/.github/workflows/pyxir_integration.yml
+++ b/.github/workflows/pyxir_integration.yml
@@ -34,6 +34,10 @@ jobs:
           - pytorch_version: '1.3.1'
             conda_python_version: '3.8'
 
+          - platform: 'macos-latest'
+            pytorch_version: '1.5.0'
+            conda_python_version: '3.6'
+
 
 
     steps:
