--- a/requirements/requirements-finn-integration.txt
+++ b/requirements/requirements-finn-integration.txt
@@ -2,5 +2,5 @@ bitstring
 onnx==1.5.0; python_version < '3.8' or sys_platform == 'linux'
 onnx; python_version >= '3.8' and sys_platform != 'linux'
 onnxruntime==1.4.0
-finn @ git+https://github.com/Xilinx/finn@master#egg=finn
+finn @ git+https://github.com/Xilinx/finn@dev#egg=finn
 toposort
