Setup (pytest): show hypothesis statistics in pytest summary
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,6 @@
 log_cli = 1
 log_cli_level = WARNING
 log_cli_format = %(message)s
+
+# Enable hypothesis statistics
+addopts = --hypothesis-show-statistics
