Tests (config): disable Hypothesis statistics, enable standalone mock package
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,5 +5,5 @@ log_cli = 1
 log_cli_level = WARNING
 log_cli_format = %(message)s
 
-# Enable hypothesis statistics
-addopts = --hypothesis-show-statistics
+# pytest-mock should use Pypi's mock rather than Python's built-in
+mock_use_standalone_module = true
