--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -14,9 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         conda_python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0', '1.5.0']
+        pytorch_version: ['1.1.0', '1.2.0', '1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
-        jit_status: ['jit_enabled', 'jit_disabled']
+        jit_status: ['jit_disabled']
 
 
         exclude:
@@ -27,9 +27,6 @@ jobs:
             conda_python_version: '3.8'
 
           - pytorch_version: '1.2.0'
-            conda_python_version: '3.8'
-
-          - pytorch_version: '1.3.0'
             conda_python_version: '3.8'
 
           - pytorch_version: '1.3.1'
