--- a/.github/workflows/pyxir_integration.yml
+++ b/.github/workflows/pyxir_integration.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         conda_python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.0', '1.3.1', '1.4.0', '1.5.0']
+        pytorch_version: ['1.1.0', '1.2.0', '1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
 
@@ -26,9 +26,6 @@ jobs:
             conda_python_version: '3.8'
 
           - pytorch_version: '1.2.0'
-            conda_python_version: '3.8'
-
-          - pytorch_version: '1.3.0'
             conda_python_version: '3.8'
 
           - pytorch_version: '1.3.1'
