--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -58,9 +58,9 @@ jobs:
       shell: bash
       run: pip install -r requirements/requirements-nox.txt
 
-    - name: Install libsndfile on Ubuntu
+    - name: Install libsndfile and libgomp1 on Ubuntu
       shell: bash
-      run: sudo apt-get install -y libsndfile-dev
+      run: sudo apt-get install -y libsndfile-dev libgomp1
       if: startsWith(runner.os, 'Linux') == true
 
     - name: Install libomp on macOS
