Setup: add future-annotations to requirements
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,6 +1,7 @@
 torch>=1.1.0
 packaging
 setuptools
+future-annotations
 dependencies==2.0.1
 typing-extensions>=3.7.4
 dataclasses; python_version < '3.7'
