--- a/.github/workflows/xir_integration.yml
+++ b/.github/workflows/xir_integration.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ['3.6', '3.7']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.1', '1.4.0']
+        pytorch_version: ['1.4.0']
         platform: ['ubuntu-latest']
 
 
