--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -14,21 +14,12 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.1.0', '1.2.0', '1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1']
+        pytorch_version: ['1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1', '1.8.1']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
         jit_status: ['jit_disabled']
 
 
         exclude:
-          - platform: 'macos-latest'
-            pytorch_version: '1.1.0'
-
-          - pytorch_version: '1.1.0'
-            python_version: '3.8'
-
-          - pytorch_version: '1.2.0'
-            python_version: '3.8'
-
           - pytorch_version: '1.3.1'
             python_version: '3.8'
 
