--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python_version: ['3.6', '3.7', '3.8']
         pytorch_version: ['1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1', '1.8.1']
-        platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
+        platform: ['windows-latest', 'ubuntu-latest']
 
 
         exclude:
