CI: remove support for PT 1.3 and 1.4
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,14 +14,10 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1', '1.8.1']
+        pytorch_version: ['1.5.0', '1.6.0', '1.7.1', '1.8.1']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
         jit_status: ['jit_disabled']
 
-
-        exclude:
-          - pytorch_version: '1.3.1'
-            python_version: '3.8'
 
 
 
