--- a/.github/workflows/ort_integration.yml
+++ b/.github/workflows/ort_integration.yml
@@ -14,13 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ['3.6', '3.7', '3.8']
-        pytorch_version: ['1.3.1', '1.4.0', '1.5.0', '1.6.0', '1.7.1', '1.8.1']
+        pytorch_version: ['1.5.0', '1.6.0', '1.7.1', '1.8.1']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
-
-        exclude:
-          - pytorch_version: '1.3.1'
-            python_version: '3.8'
 
 
 
