Fix (gha): removed tests against python 3.6

--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -13,14 +13,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ['3.6', '3.7', '3.8']
+        python_version: ['3.7', '3.8']
         pytorch_version: ['1.5.1', '1.6.0', '1.7.1', '1.8.1', '1.9.1', '1.10.0']
         platform: ['windows-latest', 'ubuntu-latest']
 
-
-        exclude:
-          - platform: 'windows-latest'
-            python_version: '3.6'
 
 
 
