Exclude MacOS from notebook testing

--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -22,6 +22,8 @@ jobs:
           - pytorch_version: '1.6.0'
           - pytorch_version: '1.7.1'
 
+          - platform: 'macos-latest'
+
 
 
     steps:
