Test: Added end-to-end tests for graph quantization

--- a/.github/workflows/base.yml.template
+++ b/.github/workflows/base.yml.template
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     strategy:
-      fail-fast: false
+&{strategy}
       matrix:
 &{matrix}
 &{exclude}
