--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -1,4 +1,4 @@
-name: Examples Pytest
+name: Test End-to-end flows
 
 on:
   push:
@@ -11,14 +11,17 @@ jobs:
 
     strategy:
       fail-fast: false
+      max-parallel: 4
 
 
       matrix:
         python_version: ['3.7', '3.8']
         pytorch_version: ['1.5.1', '1.6.0', '1.7.1', '1.8.1', '1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
-        jit_status: ['jit_disabled']
 
+
+        exclude:
+          - platform: 'windows-latest'
 
 
 
@@ -46,8 +49,8 @@ jobs:
       run: brew install libomp
       if: startsWith(runner.os, 'macOS') == true
 
-    - name: Run Nox session for brevitas_examples pytest
+    - name: Run Nox session for end-to-end flows
       shell: bash
-      run: nox -v -s tests_brevitas_examples_cpu-${{ matrix.python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+      run: nox -v -s tests_brevitas_end_to_end-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
 
 
