--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -46,11 +46,12 @@ jobs:
       if: startsWith(runner.os, 'macOS') == true
 
     - name: Install protobuf on Ubuntu
+      if: startsWith(runner.os, 'Linux') == true
       shell: bash
       run: sudo apt-get install protobuf-compiler libprotoc-dev
-      if: startsWith(runner.os, 'Linux') == true
 
     - name: Run Nox session for Brevitas-FINN integration
+      if: ${{ (contains(fromJson('["1.5.1", "1.10.1", "1.13.0"]'), matrix.pytorch_version ) && github.event_name == 'pull_request' && matrix.platform == 'ubuntu-latest' )  || (github.event_name != 'pull_request') || (github.event_name == 'pull_request' && github.event.action == 'review_requested')}} 
       shell: bash
       run: nox -v -s tests_brevitas_finn_integration-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
 
